cmake_minimum_required(VERSION 3.27)

project(
  AdventOfCode2023
  VERSION 1.0
  LANGUAGES CXX)

add_executable(day01a src/day01a.cpp)
add_executable(day01b src/day01b.cpp)
add_executable(day02a src/day02a.cpp)
add_executable(day02b src/day02b.cpp)
add_executable(day03a src/day03a.cpp)
add_executable(day03b src/day03b.cpp)
add_executable(day04a src/day04a.cpp)
add_executable(day04b src/day04b.cpp)